--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 *But* We try to install everything from source, all GitLab dependencies(Ruby,  Redis, Nginx, Mariadb, etc.)
 
-# Notes on the reliability of guides/scripts
+## Notes on the reliability of guides/scripts
 
 * Everything has been through test in a clean, newly installed CentOS6.5/6 Minimal.
 * You should read a script and understand what it does prior to running it.
